style/style.css
@import url('https://fonts.googleapis.com/css2?family=Iosevka+Charon+Mono:ital,wght@0,1200;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');

/*
   light mode colors
*/

:root {
   --background: rgb(255, 255, 255);

   --text: rgb(26, 26, 27);
   --text-light: rgb(63, 63, 70);

   --link: rgb(0, 0, 255);
   --link-light: rgb(196, 196, 255);

   --code-keyword: rgb(255, 20, 20);
   --code-function: rgb(125, 0, 255);
   --code-string: rgb(0, 150, 0);
   --code-comment: rgb(125, 125, 125);

   --table-checker: #f2f2f2;
   --table-border: #ddd;
   --table-header: #44f;

   --font-heading: "Ubuntu", sans-serif;
   --font: "Ubuntu", sans-serif;
   --font-mono: "Iosevka Charon Mono", monospace;
}

/*
   dark mode colors
*/

[data-theme="dark"] {
   --background: rgb(0, 0, 0);

   --text: rgb(220, 220, 220);
   --text-light: rgb(120, 120, 120);

   --link: rgb(90, 170, 255);
   --link-light: rgb(10, 20, 120);
   
   --code-keyword: rgb(255, 110, 110);
   --code-function: rgb(204, 95, 254);
   --code-string: rgb(114, 253, 114);
   --code-comment: rgb(125, 125, 125);
   
   --table-checker: rgb(20, 20, 20);
   --table-border: rgb(30, 30, 30);
   --table-header: rgb(10, 20, 120);
}

html, body {
   color: var(--text);
   overflow-y: auto;
   margin: 0;
   padding: 0;
}

/*
   Generic style
*/

a {
   font-family: var(--font);
   color: var(--link);
   text-decoration: none;
   cursor: default;
   font-weight: 500;
}

a.link-disabled {
   color: var(--text-light)
}

a:hover:not(.link-disabled) {
   text-decoration: underline;
   cursor: pointer;
}

:not(p) > a {
   user-select: none;
   margin-block: 1.2rem;
   margin-inline: 0.4rem;

   @media (width >= 40rem) {
      margin-inline: 1.4rem;
   }
}

img {
   display: block;
   user-select: none;
   width: 100%;
   border-radius: 16px;
}

.iframe-container {
   position: relative;
   overflow: hidden;
   width: 100%;
}

.youtube-video {
   padding-top: 56.25%; /* 16:9 */
}

.itch-link {
   padding-top: 25%; /* just works */
}

iframe {
   position: absolute;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   width: 100%;
   height: 100%;
}

table {
   font-family: var(--font);
   margin-block: 25px;
   border-collapse: collapse;
   width: 100%;
}

td, th {
   border: 1px solid var(--table-border);
   padding: 8px;
}

tr:nth-child(even) {
   background-color: var(--table-checker);
}

tr:hover {
   background-color: var(--table-border);
}

th {
   padding-block: 12px;
   text-align: left;
   background-color: var(--table-header);
   color: white;
}

#ld-switch {
   position: absolute;
   height: 48px;
   width: 48px;
   right: 10px;
   top: 10px;
   cursor: pointer;
}

/*
   Header
*/

header {
   display: flex;
   flex-direction: row;
   justify-content: center;
}

/*
   Body
*/

body {
   background-color: var(--background);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
   min-height: 100vh;
}

article {
   margin-inline: auto;
   padding-inline: 1rem;
   margin-bottom: auto;
   max-width: 42rem;
   width: auto !important;
}

article h1 {
   font-weight: bold;
   font-family: var(--font-heading);
   font-size: 2.25rem;
   line-height: 1.1;

   text-align: center;
   margin-block: 1.4rem;
   color: var(--text);
}

article h2 {
   font-weight: bold;
   font-family: var(--font-heading);
   font-size: 1.9rem;
   line-height: 0.9;

   text-align: left;
   margin-block: 1rem;
   color: var(--text);
}

article h3 {
   font-family: var(--font-heading);
   font-size: 1rem;

   text-align: center;
   color: var(--text-light);
}

article pre {
   white-space: pre-wrap;
   word-wrap: break-word;
   overflow-wrap: anywhere;
   overflow: auto;
   font-family: var(--font);
   font-size: 0.9rem;
   color: var(--text-light);
}

article p, article label {
   font-family: var(--font);
   color: var(--text);
   font-size: 1rem;
   line-height: 1.5;
   margin-block: 5px;
}

article span {
   margin-left: 25px;
}

/*
   Footer
*/

footer {
   margin: 0;
   padding: 0;

   width: 100vw;
   height: 100px;
   padding-top: 20px;
   margin-top: 125px;
}

footer a {
   margin-block: 0px;
}

footer p {
   text-align: center;
   font-family: var(--font);
   color: var(--text-light);
}

footer div {
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin-block: auto;
}

/*
   index.html, projects.html and blog.html specifics
*/

#pages {
   margin-block: 30px;
}

#projects, #blogs, #pages {
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 15px;
}

#projects a, #blogs a, #pages a {
   margin-block: 10px;
   padding: 20px;
   background-color: var(--background);
   border-radius: 16px;
   border: 1px solid var(--text-light);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
   transition: transform 100ms, border 100ms, box-shadow 100ms;
}

#projects a:hover, #blogs a:hover, #pages a:hover {
   transform: translateY(-5px);
   border: 1px solid var(--link);
   background-color: var(--link-light);
   box-shadow: 0 7px 8px rgba(0, 0, 0, 0.3);
}

#projects a, #blogs a, #pages a {
   margin: 0;
   margin-bottom: 5px;
}

#projects a:hover, #blogs a:hover, #pages a:hover {
   text-decoration: none;
}

#bad-search {
   text-align: center;
   display: none;
   color: var(--text-light);
}

#search-bar {
   width: 100%;
   padding: 5px;
   box-sizing: border-box;
   text-align: left;
   margin-block: 12.5px;
   border-radius: 16px;
   background-color: var(--background);
   border: 1.5px solid;
   border-color: var(--text-light);
   color: var(--text);
   font-family: var(--font);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
}

#search-bar:focus {
   outline: none;
   background-color: var(--link-light);
   border-color: var(--link);
}

#project-buttons {
   display: flex;
   flex-direction: row;
   justify-content: center;
}

#project-buttons button {
   width: 45px;
   height: 45px;
   margin: 5px;
   margin-top: 30px;

   color: var(--text);
   font-family: var(--font);
   font-size: 1.25rem;
   border-radius: 16px;
   border: 1.5px solid var(--text-light);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
   background-color: var(--background);
   transition: transform 100ms, box-shadow 100ms;
}

#project-buttons button:not(.selected-btn):hover {
   transform: translateY(-3px);
   box-shadow: 0 5px 8px rgba(0, 0, 0, 0.3);
}

#project-buttons .selected-btn {
   color: var(--link);
   background-color: var(--link-light);
   border-color: var(--link);
}

article img:not(#x):not(.img-fullscreen) {
   border: 1.5px solid var(--text-light);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
   margin-block: 15px;
   cursor: pointer;
}

#img-background {
   height: 100vh;
   width: 100vw;
   position: fixed;
   background-color: #000;
   top: 0;
   left: 0;
   margin: 0;
   padding: 0;
}

.img-fullscreen {
   max-width: 100%;
   max-height: 100%;
   bottom: 0;
   left: 0;
   right: 0;
   top: 0;
   margin: auto;
   overflow: auto;
   position: fixed;
   object-fit: contain;
   transition: none;
   position: absolute;
   z-index: 1000;
   cursor: pointer;
}

#x {
   position: fixed;
   display: none;
   width: 3.5rem;
   height: 3.5rem;
   top: 0;
   left: 0;
}

#x:hover {
   scale: 1.1 !important;
}

#x:active {
   scale: 0.9 !important;
}

/*
   Blog specifics
*/

.container {
   margin-block: 10px;
   padding: 10px;
   background-color: var(--background);
   border-radius: 16px;
   border: 1.5px solid var(--text-light);
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
}

.flex-row {
   display: flex;
   flex-direction: row;
   justify-content: center;
}

.mono {
   font-family: var(--font-mono);
   color: var(--text);
}

/*
   Code colors
*/

k {
   color: var(--code-keyword);
}

f {
   color: var(--code-function);
}

t {
   color: var(--code-string);
}

c {
   color: var(--code-comment);
}

